@@ -19,8 +19,8 @@ import java.util.StringTokenizer;
 
 import vavi.util.Debug;
 import vavi.util.archive.Archive;
+import vavi.util.archive.CommonEntry;
 import vavi.util.archive.Entry;
-import vavi.util.archive.spi.CommonEntry;
 
 
 /**
@@ -47,7 +47,7 @@ public class ShellGcaArchive implements Archive {
 
         final DateFormat sdf =
             new SimpleDateFormat("yyyy/MM/dd HH:mm:ss");
-        Process p = Runtime.getRuntime().exec("gcac l " + file);
+        Process p = Runtime.getRuntime().exec(new String[] { "gcac", "l", file.toString() });
         BufferedReader r = new BufferedReader(
             new InputStreamReader(p.getInputStream()));
         r.readLine();
@@ -79,27 +79,20 @@ Debug.println(e);
         }
     }
 
-    /**
-     * ファイルを閉じます。
-     */
+    @Override
     public void close() throws IOException {
     }
 
-    /**
-     * ファイルエントリの列挙を返します。
-     */
-    public Entry<?>[] entries() {
-        Entry<?>[] entries = new Entry[this.entries.size()];
+    @Override
+    public Entry[] entries() {
+        Entry[] entries = new Entry[this.entries.size()];
         this.entries.toArray(entries);
         return entries;
     }
 
-    /**
-     * 指定された名前の GCA ファイルエントリを返します。
-     * 見つからない場合は null を返します。
-     */
-    public Entry<?> getEntry(String name) {
-        for (Entry<?> entry : entries) {
+    @Override
+    public Entry getEntry(String name) {
+        for (Entry entry : entries) {
             if (entry.getName().equals(name)) {
                 return entry;
             }
@@ -107,24 +100,17 @@ Debug.println(e);
         return null;
     }
 
-    /**
-     * 指定された ファイルエントリの内容を読み込むための入力ストリームを
-     * 返します。
-     */
-    public InputStream getInputStream(Entry<?> entry) throws IOException {
+    @Override
+    public InputStream getInputStream(Entry entry) throws IOException {
         return null;
     }
 
-    /**
-     * ファイルのパス名を返します。
-     */
+    @Override
     public String getName() {
         return file.getPath();
     }
 
-    /**
-     * ファイル中のエントリの数を返します。
-     */
+    @Override
     public int size() {
         return entries.size();
     }
